[gd_scene load_steps=13 format=3 uid="uid://cs0s3jnefyqhr"]

[ext_resource type="Script" path="res://Game/game.gd" id="1_o2um4"]
[ext_resource type="PackedScene" uid="uid://bbi37d8idbq2l" path="res://Sperm/sperm.tscn" id="1_odafg"]
[ext_resource type="PackedScene" uid="uid://bfin8g0qtlosd" path="res://Egg/egg.tscn" id="2_h74cu"]
[ext_resource type="Texture2D" uid="uid://s7q1eohbso5" path="res://Assets/background.png" id="3_opbjn"]
[ext_resource type="Script" path="res://Game/shake.gd" id="6_7f4mk"]
[ext_resource type="FontFile" uid="uid://35ksml1wxw16" path="res://Assets/Fonts/ARCADECLASSIC.TTF" id="6_lydnl"]
[ext_resource type="AudioStream" uid="uid://c860834vil4cm" path="res://Assets/GameOver.mp3" id="7_a7foa"]

[sub_resource type="LabelSettings" id="LabelSettings_rq30o"]
font = ExtResource("6_lydnl")
font_size = 90
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_obr6r"]
resource_name = "game over"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 309), Vector2(1, 277), Vector2(1, 325), Vector2(1, 343), Vector2(1, 309)]
}

[sub_resource type="Animation" id="Animation_68o31"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 309)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p6dtv"]
_data = {
"RESET": SubResource("Animation_68o31"),
"game over": SubResource("Animation_obr6r")
}

[sub_resource type="LabelSettings" id="LabelSettings_bjrdg"]
font = ExtResource("6_lydnl")
font_size = 48
outline_size = 3
outline_color = Color(0.611765, 0, 0, 1)

[node name="Game" type="Node2D"]
script = ExtResource("1_o2um4")
sperm_scene = ExtResource("1_odafg")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -4568.0
offset_top = -3772.0
offset_right = -3728.0
offset_bottom = -2932.0
scale = Vector2(14.2, 18.0702)
texture = ExtResource("3_opbjn")

[node name="SpermHolder" type="Node" parent="."]

[node name="Egg" parent="." instance=ExtResource("2_h74cu")]
position = Vector2(410, 410)

[node name="SpawnPositions" type="Node" parent="."]

[node name="Spawn_UL" type="Marker2D" parent="SpawnPositions"]
position = Vector2(-50, -50)

[node name="Spawn_UR" type="Marker2D" parent="SpawnPositions"]
position = Vector2(890, -50)

[node name="Spawn_LL" type="Marker2D" parent="SpawnPositions"]
position = Vector2(-50, 890)

[node name="Spawn_LR" type="Marker2D" parent="SpawnPositions"]
position = Vector2(890, 890)

[node name="Spawn Timer" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[node name="BgMusic" type="AudioStreamPlayer" parent="."]
autoplay = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(420, 420)
script = ExtResource("6_7f4mk")

[node name="GameOverScreen" type="CanvasLayer" parent="."]
visible = false

[node name="GameOver" type="Label" parent="GameOverScreen"]
offset_left = 1.0
offset_top = 309.0
offset_right = 676.0
offset_bottom = 442.0
scale = Vector2(1.24, 1.56)
text = "f e r ti li z e d"
label_settings = SubResource("LabelSettings_rq30o")
horizontal_alignment = 1
justification_flags = 161

[node name="AnimationPlayer" type="AnimationPlayer" parent="GameOverScreen/GameOver"]
autoplay = "game over"
libraries = {
"": SubResource("AnimationLibrary_p6dtv")
}

[node name="Press" type="Label" parent="GameOverScreen"]
offset_left = 1.0
offset_top = 787.0
offset_right = 836.0
offset_bottom = 839.0
text = "Press Space for Main Menu"
label_settings = SubResource("LabelSettings_bjrdg")
horizontal_alignment = 1

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_a7foa")
volume_db = 7.495

[connection signal="timeout" from="Spawn Timer" to="." method="_on_spawn_timer_timeout"]
[connection signal="finished" from="BgMusic" to="." method="_on_bg_music_finished"]
